--- a/index.html
+++ b/index.html
@@ -19,19 +19,9 @@
     vr-mode-ui="enabled: false"
     style="display:none"
   >
-    <a-marker type="pattern" url="pattern-hiro.patt">
-      <a-box position="0 0.5 0" material="color: red;"></a-box>
-
-              <!-- <a-entity
-          geometry="primitive: plane; width: 1.2; height: 0.4"
-          material="color: #FFD700; opacity: 0.9; side: double"
-          position="0 0.5 0"
-          class="clickable"
-          text="value: TAP TO CLAIM; align: center; color: #111; width: 4;"
-        ></a-entity> -->
-
-
-    </a-marker>
+   <a-marker preset="hiro">
+            <a-box position="0 0.5 0" material="color: yellow;"></a-box>
+        </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 
