--- a/locar_vite/index.html
+++ b/locar_vite/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      console.log = function(message) {
+        window.alert(message);
+      };
+
+      // console.log("hello");
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
